Fix gap above header on internal pages: remove orphaned .header2 CSS offsets, remove PHP closing tags causing whitespace

--- a/Header.css
+++ b/Header.css
@@ -2435,26 +2435,14 @@ input[type="checkbox"]:checked+.heart-icon {
 
 
 /* Sticky Header Implementation */
-.header2 {
-  background-color: #16BAE4;
-  height: 35px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0 20px;
-  box-shadow: 0 0 3px #000;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  width: 100%;
-}
+/* .header2 removed from HTML - CSS cleaned up */
 
 .navbar {
   background-color: #fff;
   border-bottom: 1px solid #dee2e6;
   padding: 0 0.5px !important;
   position: sticky;
-  top: 35px;
+  top: 0;
   z-index: 999;
   width: 100%;
 }
@@ -2465,7 +2453,7 @@ input[type="checkbox"]:checked+.heart-icon {
   border-top: none;
   border-bottom: none;
   position: sticky;
-  top: 91px;
+  top: 56px;
   z-index: 998;
   width: 100%;
   overflow: hidden;
@@ -2498,7 +2486,7 @@ input[type="checkbox"]:checked+.heart-icon {
 
 .category-navbar {
   position: sticky;
-  top: 91px;
+  top: 56px;
   z-index: 997;
   background-color: #ffffff;
   border-top: 1px solid #e0e0e0;
@@ -2513,11 +2501,11 @@ input[type="checkbox"]:checked+.heart-icon {
   }
 
   .category-scroll-container {
-    top: 130px;
+    top: 56px;
   }
 
   .category-navbar {
-    top: 83px;
+    top: 56px;
   }
 }
 
